--- a/pom.xml
+++ b/pom.xml
@@ -184,7 +184,14 @@
                         <artifactId>maven-filtering</artifactId>
                         <version>1.3</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.projectlombok</groupId>
+                        <artifactId>lombok</artifactId>
+                        <version>1.16.16</version>
+                        <scope>provided</scope>
+                    </dependency>
                 </dependencies>
+
             </plugin>
         </plugins>
     </build>
